frontend/static/css/style.css
/* GlOBAL SETTINGS */
* {
  box-sizing: border-box;
}

.container {
  max-width: 1600px !important;
}

html {
  font-size: 62.5%;
  color: black;
}

a {
  text-decoration: none !important;
}

h1 {
  margin: 0;
  padding: 0;
  font-family: "Suez One", serif;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1.2;
  text-transform: none;
}

body {
  margin: 0;
  font-family: "Poppins", sans-serif;
  overflow: hidden;
}

.alert {
  padding: 25px 10px;
  display: block;
  text-align: center;
}

.success-alert {
  background: rgba(144, 238, 144, 0.3) !important;
  border-radius: 10px !important;
}

.error-alert {
  background: rgba(240, 128, 128, 0.3) !important;
  border-radius: 20px !important;
}

/* BOOTSTRAP */

.selectpicker {
  font-size: 15px; /* change this value to the desired font size */
}

/* HEADER */

header {
  background: #162f65;
  width: 100%;
  height: 10%;
  padding: 0 20px;
  display: flex;
  font-family: "Poppins", sans-serif;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
}

header .header-part {
  display: flex;
  align-items: center;
}

header .flex-logo {
  flex-basis: 15%;
}

header .dreamwork-logo {
  font-size: min(2.4rem, 4vw);
  color: #e8c766;
  font-family: "Suez One", serif;
  word-wrap: nowrap;
}

header .nav-menu .menu-item {
  padding: 10px 20px;
  text-align: center;
}

header .flex-user .user-name {
  color: #f1dda3;
  font-weight: 400;
  font-size: 1.8rem;
  padding-bottom: 0.4rem;
}

header .flex-user .user-role {
  color: #efd894;
  font-weight: 600;
  font-size: 1.2rem;
  text-align: end;
}

header .flex-user {
  flex-basis: 80%;
  justify-content: end;
  gap: 10px;
  min-width: 25rem;
}

/* Sidebar */
.sidebar {
  height: 100%;
  max-width: 200px;
  background: #eeeee7;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.sidebar-nav {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.list-group-item.active {
  background-color: #007bff;
  color: #fff;
}

/* .nav-top {
} */
.nav-bottom {
  position: relative;
  bottom: 0px;
}

.sidebar-nav .nav-item {
  position: relative;
  display: flex;
  gap: 1.6rem;
  padding: 2rem;
  width: 100%;
  flex-wrap: wrap;
}

.sidebar-nav .nav-item .active-indicator {
  background: #e8c766;
  position: absolute;
  height: 100%;
  width: 5px;
  left: 0;
  top: 0;
}

.sidebar-nav .nav-item .icon {
  width: 2.6rem;
}

.sidebar-nav .nav-item .text {
  font-size: 1.8rem;
  color: black;
}

.sidebar-nav .nav-item:hover {
  background: rgba(190, 190, 185, 0.15);
  border-radius: 20px;
}

.sidebar-nav .nav-item:active {
  background: rgba(190, 190, 185, 0.3);
  border-radius: 20px;
  color: black;
}

.sidebar-nav .logout {
  align-self: end;
  justify-self: end;
}

.sidebar-nav .current-project-text {
  flex-basis: 100%;
}

.sidebar-nav .current-project-text p:first-child {
  font-size: 12px;
  padding: 0px;
  margin: 0px;
  color: rgba(0, 0, 0, 0.69);
}

.sidebar-nav .current-project-text p:nth-child(2) {
  font-size: 14px;
  font-weight: bold;
  padding: 0px;
  margin: 0px;
  color: black;
}

/*------------------ View content */

.body-flex {
  display: flex;
  height: 90%;
}

.view-content {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 2rem;
  overflow-y: scroll;
  position: relative;
}

/* -----------------Home (Dashboard) */

.invitation-bottom-bar {
  width: 70%;
  height: 70px;
  position: absolute;
  background: #eeeee7;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  bottom: 0px;
  right: 50%;
  transform: translate(50%, 0%);
  display: flex;
  padding: 10px;
}

.invitation-bottom-bar .text-col {
  flex-basis: 90%;
}

.invitation-bottom-bar .code-generation-col {
  flex-basis: 10%;
}

.code-generation-button {
  border: 0px;
  width: 100%;
  height: 100%;
  font-size: 13px;
}

.invitation-modal-window {
  display: none;
}

.invitation-modal-body {
  background: white;
  border-radius: 20px;
  position: relative;
  max-width: 600px;
  width: 100%;
  min-height: 200px;
  padding: 20px;
}

/* -----------------Project-content */

.projects-col {
  position: relative;
  flex-basis: 12%;
}

.project-info-col {
  flex-basis: 44%;
}

.users-list-col {
  flex-basis: 44%;
}

.projects-header {
  padding: 7px 7px 10px 7px;
  border-bottom: rgba(99, 99, 99, 0.5) solid 2px;
  margin-bottom: 0px;
}

.project-container {
  display: flex;
  flex-wrap: wrap;
  background-color: var(--white);
  padding: 1rem;
  border-radius: 8px;
  width: 100%;
  min-height: 350px;
  margin-bottom: 1rem;
}

.project-container .col {
  box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px;
  padding: 1rem;
  height: 100%;
}

.project-list a {
  font-size: 12px;
  padding: 10px;
  margin-top: 10px;
}

.list-group-items {
  border-radius: 20px;
  border: 1px solid rgba(99, 99, 99, 0.1);
  color: black;
}

.project-list a:hover {
  background: rgba(0, 0, 0, 0.063);
}

.create-new-project-btn {
  width: 80%;
  display: flex;
  padding: 5px 0px;
  margin-bottom: 2rem;
  justify-content: center;
  align-items: center;
  border: 0px solid black;
  gap: 5px;
  bottom: 0;
  position: absolute;
}

.create-center {
  display: flex;
  justify-content: center;
}

.create-new-project-btn img {
  width: 23px;
}

.create-new-project-btn h5 {
  margin: 0px;
  font-weight: 300;
  font-size: 14px;
}

.modal-window {
  width: 100%;
  height: 100%;
  position: absolute;
  background: rgba(0, 0, 0, 0.2);
  top: 0px;
  left: 0px;
  z-index: 2;
  justify-content: center;
  align-items: center;
}

.create-new-project-window {
  background: white;
  border-radius: 20px;
  max-width: 1300px;
  width: 90%;
  height: 80%;
  padding: 20px;
  position: relative;
}

.create-new-project-window form {
  height: 100%;
}
/* ... */

